@@ -2,8 +2,6 @@ SUBARCH_SUPPORTED = demo sparc32 sparc64 miniiso
  
 VERSIONED_SYSTEM_MAP = t
  
-# INITRD_FS = romfs
- 
 # FIXME: Temporary fix, these files should be in a udeb!
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
 
