@@ -18,12 +18,11 @@ arch_miniiso:
 	install -m 644 -D $(BASE_TMP)miniiso/initrd.gz $(TEMP_CD_TREE)/boot/initrd.gz
 	install -m 644 -D $(BASE_TMP)miniiso/vmlinuz*32 $(TEMP_CD_TREE)/boot/vmlinuz-sparc32
 	install -m 644 -D $(BASE_TMP)miniiso/vmlinuz*64 $(TEMP_CD_TREE)/boot/vmlinuz-sparc64
-	install -m 644 /boot/isofs.b $(TEMP_CD_TREE)/boot
 	install -m 644 /boot/second.b $(TEMP_CD_TREE)/boot
 	install -m 644 $(TEMP_BOOT_SCREENS)/debian.txt $(TEMP_CD_TREE)/boot
 	install -m 644 boot/sparc/silo.conf $(TEMP_CD_TREE)/boot
  
-	mkisofs -r -J -o $(TEMP_MINIISO) -G $(TEMP_CD_TREE)/boot/isofs.b -B ... $(TEMP_CD_TREE)
+	mkisofs -r -J -o $(TEMP_MINIISO) -G /boot/isofs.b -B ... $(TEMP_CD_TREE)
 
 arch_boot_screens:
 	-rm -f $(TEMP_BOOT_SCREENS)/*
